# app/api/controllers/usersController.js
@@ -153,7 +153,7 @@ export const getUserInformation = async (req, res, next) => {
 
 export const getUsersFollowers = async (req, res) => {
     const requestedUserId = req.query.id ?? req.user.id;
-    const allFollowers = await usersService.userWithFollowers(requestedUserId);
+    const { followers: allFollowers } = await usersService.userWithFollowers(requestedUserId);
     const { page, pages, total, items: followers } = paginateItems(req.query.page, req.query.limit, allFollowers);
 
     res.json({ page, pages, total, followers });
@@ -161,8 +161,9 @@ export const getUsersFollowers = async (req, res) => {
 
 export const getUsersFollowees = async (req, res) => {
     const authUserId = req.user.id;
-    const allFollowees = await usersService.userWithFollowees(authUserId);
+    const { followees: allFollowees } = await usersService.userWithFollowees(authUserId);
     const { page, pages, total, items: followees } = paginateItems(req.query.page, req.query.limit, allFollowees);
+
     res.json({ page, pages, total, followees });
 };
 
