# app/api/openapi.yaml
@@ -217,7 +217,7 @@ paths:
                 - $ref: '#/components/parameters/limit_query'
             responses:
                 '200':
-                    $ref: '#/components/responses/followersResponse'
+                    $ref: '#/components/responses/followeesResponse'
                 '401':
                     $ref: '#/components/responses/notAuthorisedResponse'
                 '500':
@@ -579,14 +579,37 @@ components:
             content:
                 application/json:
                     schema:
-                        allOf:
-                            - $ref: '#/components/schemas/fullUser'
-                            - type: object
-                              properties:
-                                  followers:
-                                      type: array
-                                      items:
-                                          $ref: '#/components/schemas/fullUser'
+                        type: object
+                        properties:
+                            page:
+                                type: integer
+                            pages:
+                                type: integer
+                            total:
+                                type: integer
+                                description: Total count of recipes
+                            followers:
+                                type: array
+                                items:
+                                    $ref: '#/components/schemas/fullUser'
+        followeesResponse:
+            description: Successfully logged in
+            content:
+                application/json:
+                    schema:
+                        type: object
+                        properties:
+                            page:
+                                type: integer
+                            pages:
+                                type: integer
+                            total:
+                                type: integer
+                                description: Total count of recipes
+                            followees:
+                                type: array
+                                items:
+                                    $ref: '#/components/schemas/fullUser'
         userResponse:
             description: User information
             content:
